--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 # site properties and page defaults
-title: Mashike99
+title: Albrecht Lab
 subtitle: 
 description: An engaging 1-3 sentence description of your lab.
 header: images/background.jpg
@@ -7,12 +7,12 @@ footer: images/background.jpg
 
 # site social media and other links
 links:
-  email: contact@Mashike99.com
-  orcid: 0000-0001-8713-9213
+  email: bbmeyering@ufl.edu
+  orcid: 0000-0003-1889-9598
   google-scholar: ETJoidYAAAAJ
   github: Mashike99
-  twitter: Mashike99
-  youtube: Mashike99
+  twitter:
+  youtube:
 
 ### jekyll settings
 
