--- a/_data/types.yaml
+++ b/_data/types.yaml
@@ -14,6 +14,18 @@ phd:
   icon: fa-solid fa-graduation-cap
   description: PhD Student
 
+ms:
+  icon: fa-solid fa-graduation-cap
+  description: Masters Student
+
+biosci:
+  icon: fa-solid fa-flask
+  description: Biological Scientist
+
+agasst:
+  icon: fa-solid fa-flask
+  description: Agricultural Assistant
+  
 undergrad:
   icon: fa-solid fa-user-graduate
   description: Undergraduate Student
@@ -21,6 +33,10 @@ undergrad:
 programmer:
   icon: fa-solid fa-code
   description: Programmer
+
+datascientist:
+  icon: fa-brands fa-python
+  description: Data Scientist
 
 mascot:
   icon: fa-solid fa-dog
