changed images and added the 'former' role type

--- a/_data/types.yaml
+++ b/_data/types.yaml
@@ -41,6 +41,9 @@ programmer:
 datascientist:
   icon: fa-brands fa-python
   description: Data Scientist
+  
+former:
+  description: Lab Alumnus
 
 mascot:
   icon: fa-solid fa-dog
